# pythonnotesapp

./: .anjuta_sym_db.db  Makefile.am  README.md  configure.ac  initial  notebook_c05dd962-95b3-4c41-b1f9-3726ca6fe68c.note  settings.cfg
.anjuta/session/: anjuta.session  dock-layout.xml
.ropeproject/: objectdb
css/: blue.css  bright.css  dark.css  red.css  yellow.css
src/: .goutputstream-4WA6NW  Makefile.am  encryption.py  encryption_.py  filesys.py  mongo.py  notesapp.py  notesapp.ui  settings.py  settings.ui  test.py  utils.py
